# mou-utils

./: .gitignore  README.md  pyproject.toml  sample.env  setup.sh
git_hooks/: post-checkout
mou-data/: .prettierignore  eslint.config.mjs  package-lock.json  package.json  sample.mou.env
mou-data/mourc/: rqd-data.ts
mou-data/util/: mou-login.ts
mou_data_node/: README.md  package-lock.json  package.json  sample.env  tsconfig.json
mou_data_node/mourc/: rqd-data.ts
mou_data_node/util/: launch-browser.ts  mou-login.ts
mou_data_python/: rqd_data.py
scripts/: node-install-build.sh
