[project]
name = "mou-data-python"
version = "0.1.0"
requires-python = ">= 3.14"
description = "Python wrapper for Node.js scraping of MOU website"
authors = [{name="Liz Stanley", email="lizmstanley@gmail.com"}]
Repository = "https://github.com/lizmstanley/mou-utils"
readme = "README.md"
license = "GPL-3.0-or-later"

[project.scripts]
run-node-app = "rqd_data:main"

[tool.poetry.dependencies]
nodejs-wheel-binaries = "24.13.0"
python = "^3.14"
python-dotenv = "1.0.1"
toml = "^0.10.2"

[tool.setuptools.package-data]
mou_data = ["mou-data-node/*"]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"